--- a/src/main/webapp/VAADIN/themes/ads/styles.scss
+++ b/src/main/webapp/VAADIN/themes/ads/styles.scss
@@ -1,11 +1,11 @@
-@import "mytheme.scss";
+@import "ads";
 @import "addons.scss";
 
 // This file prefixes all rules with the theme name to avoid causing conflicts with other themes.
-// The actual styles should be defined in mytheme.scss
+// The actual styles should be defined in ads.scss
 
-.mytheme {
+.ads {
   @include addons;
-  @include mytheme;
+  @include ads;
 
 }
