--- a/src/main/webapp/VAADIN/themes/ads/ads.scss
+++ b/src/main/webapp/VAADIN/themes/ads/ads.scss
@@ -31,6 +31,30 @@ $valo-menu-background-color: #414B56;
     padding: 0;
   }
 
+  .header-bar {
+    width: 100%;
+    height: 50px;
+    position: relative;
+  }
+
+  .header-bar-logo {
+    width: 250px;
+    height: 100%;
+    background: url(img/siemens-sprites.gif) -42px 0px no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+
+  .header-bar-content {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    position: absolute;
+    left: 250px;
+    top: 0;
+  }
+
   .navigation-bar {
     width: 250px;
     position: relative;
